# ism-data-science-2025

./: README.md  attendance.ipynb  attendance_download.ipynb  hw_example.ipynb  pyproject.toml  seminar1.ipynb
homework1/: README.md
hw1/: download.ipynb
hw2/: download.ipynb
hw3/: dataset_preparation.ipynb  download.ipynb
week1/: sql_data_cleaning.ipynb
week10/: lecture1.ipynb  lecture2.ipynb  lecture2_template.ipynb
week11/: lecture2_template.ipynb
week2/: eda_plotting.ipynb  seminar_solutions.ipynb  seminar_template.ipynb
week3/: regression.ipynb  regression_template.ipynb  seminar_solutions.ipynb  seminar_tasks.ipynb
week4/: classification_lecture1.ipynb  classification_template.ipynb
week5/: model_evaluation_lecture1.ipynb  model_evaluation_lecture2.ipynb  model_evaluation_template.ipynb
week6/: tree_methods.ipynb  tree_methods_seminar.ipynb  tree_methods_seminar_tasks.ipynb  tree_methods_template.ipynb
week8/: lecture1.ipynb  lecture1_template.ipynb
week9/: lecture1.ipynb  lecture1_template.ipynb  lecture2.ipynb  lecture2_template.ipynb
