[tool.poetry]
name = "ism-data-science-2025"
version = "0.1.0"
description = ""
authors = ["harismck <haroldas.mackevicius@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
gdown = "^5.2.0"
duckdb = "^1.1.3"
ipykernel = "^6.29.5"
pandas = "^2.2.3"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
